added white background to forms. limited text in cards.

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,13 +1,17 @@
 .form-container{
   margin: 50px auto;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
+
 .login{
   display: flex;
   justify-content: center;
   width: 100%;
 }
 .form-control{
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
 .btn-login{
   display: inline-block;
