--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container col-sm-6 col-md-6 col-lg-4  form-container">
+<div class="container col-sm-6 col-md-6 col-lg-4 form-container py-2">
   <div class="login">
-    <h1>Crie sua propria campanha:</h1>
+    <h1>Crie sua campanha:</h1>
   </div>
   <%= simple_form_for [@campaign] do |f| %>
     <%= f.input :name, label:"Nome" %>
