--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-sm-6 col-md-6 col-lg-4  form-container">
+<div class="container col-sm-6 col-md-6 col-lg-4 form-container py-2">
   <div class="login">
 
   <div class="mb-4"><h1 >Faça uma nova doação</h1></div>
