--- a/app/views/campaigns/edit.html.erb
+++ b/app/views/campaigns/edit.html.erb
@@ -1,4 +1,5 @@
-<div class="container pt-5">
+<div class="container col-sm-6 col-md-6 col-lg-4 form-container py-2">
+  <div class="container pt-5">
   <h1>Editar campanha:</h1>
     <%= simple_form_for [@campaign] do |f| %>
       <%= f.input :name %>
@@ -7,4 +8,5 @@
       <%= f.input :image, as: :file %>
       <%= f.button :submit, class: 'btn btn-primary' %>
     <% end %>
+  </div>
 </div>
