--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,41 +1,43 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container col-sm-6 col-md-6 col-lg-4 form-container py-2">
+  <h2>Editar perfil</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :name, required: true, autofocus: true %>
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :phone_number, required: true, autofocus: true, placeholder: '(DDD) 9 8008-8008' %>
-    <%= f.input :picture, as: :file %>
+    <div class="form-inputs">
+      <%= f.input :name, required: true, autofocus: true %>
+      <%= f.input :email, required: true, autofocus: true %>
+      <%= f.input :phone_number, required: true, autofocus: true, placeholder: '(DDD) 9 8008-8008' %>
+      <%= f.input :picture, as: :file %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+      <%= f.input :password,
+                  hint: "deixe em branco caso não queira fazer alterações neste campo",
+                  required: false,
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :password_confirmation,
+                  required: false,
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :current_password,
+                  hint: "insira sua senha para validar as mudanças",
+                  required: true,
+                  input_html: { autocomplete: "current-password" } %>
 
-  </div>
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Atualizar perfil", class: "btn-cadastro btn btn-primary" %>
-  </div>
-<% end %>
+    <div class="form-actions">
+      <%= f.button :submit, "Atualizar perfil", class: "btn-cadastro btn btn-primary" %>
+    </div>
+  <% end %>
 
-<%# <h3>Cancel my account</h3> %>
+  <%# <h3>Cancel my account</h3> %>
 
-<%# <p>Unhappy?
-  <%#= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
-<%# </p> %>
+  <%# <p>Unhappy?
+    <%#= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
+  <%# </p> %>
 
-<%= link_to "Back", :back %>
+  <%= link_to "voltar", :back, class: "a" %>
+</div>
