--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-sm-6 col-md-6 col-lg-4  form-container">
+<div class="container col-sm-6 col-md-6 col-lg-4 form-container py-2">
   <div class="login">
     <h2>Cadastre-se</h2>
   </div>
