starting stimulus controller to rotate carousel

--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,4 +1,4 @@
-<div class="carousel-body">
+<div class="carousel-body" data-controller="rotate-carousel">
   <input type="radio" id="item-1" name="position" checked />
   <input type="radio" id="item-2" name="position" />
   <input type="radio" id="item-3" name="position" />
