--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,19 @@
-<div class="container col-sm-12 col-md-8 col-lg-8">
-  <div class="header-user d-flex pt-5 mt-5 container-user">
-    <div class="d-flex">
+<div class="container col-sm-12 col-md-8 col-lg-6">
+  <div class="header-user d-flex pt-5 mt-5 container-user align-items-center">
+    <div class="d-flex align-items-center">
       <% if current_user.picture.attached? %>
-        <%= image_tag current_user.picture, style: 'border-radius: 50%; ' %>
+        <%= image_tag current_user.picture, style: 'border-radius: 50%; width: 100px; height: 100px;' %>
       <% else %>
         <%= image_tag "avatar.png", class: "avatar dropdown-toggle ", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false, style: 'border-radius: 50%; width: 100px; height: 100px;' %>
       <% end %>
       <div class="info mx-3">
-        <h4>Nome: <%= current_user.name %></h4>
-        <h5>Email: <%= current_user.email %></h5>
-        <h5>Contato: <%= current_user.phone_number %></h5>
+        <h5><%= current_user.name %></h5>
+        <h6><div class="icon"><i class="fas fa-envelope"></i></div><%= current_user.email %></h6>
+        <h6><div class="icon"><i class="fas fa-phone"></i></div><%= current_user.phone_number %></h6>
       </div>
     </div>
 
-    <div class="align-self-end">
+    <div class="align-self-end link-user">
       <%= link_to 'editar perfil', edit_user_registration_path(current_user) %>
     </div>
   </div>
@@ -21,9 +21,14 @@
 <!--------------------------------CAMPAIGNS------------------------------------>
 
 
-  <div class="campaigns my-4 container-user">
-    <h5>Minhas Campanhas:</h5>
-    <% if current_user.campaigns.count == 0 %>
+  <div class="container-campaign-user">
+    <div class="background-campaigns" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.4)), url(<%= image_path 'campaign1.jpg' %>);">
+      <div class=" my-4 container-header-campaign justify-content-center d-flex align-items-center">
+        <h3>Minhas Campanhas</h3>
+      </div>
+  </div>
+  <div class="p-5">
+<% if current_user.campaigns.count == 0 %>
       <p style="color: red;">Nenhuma campanha ativa</p>
     <% else %>
       <table class="table">
@@ -53,13 +58,21 @@
     <% end %>
   </div>
 
+  </div>
+
 <!--------------------------------DONATIONS------------------------------------>
 
-  <div class="donations my-4 container-user">
-    <h5>Minhas doações:</h5>
-    <% if current_user.donations.count == 0 %>
-      <p style="color: red;">Você não realizou nenhuma doação ultimamente</p>
-    <% else %>
+  <div class="my-6 mb-6 container-campaign-user">
+    <div class="background-campaigns" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.7)), url(<%= image_path 'doe3.jpg' %>);">
+      <div class="my-4 container-header-campaign justify-content-center d-flex align-items-center">
+        <h3>Minhas doações</h3>
+      </div>
+    </div>
+
+    <div class="p-5 mb-4">
+      <% if current_user.donations.count == 0 %>
+        <p style="color: red;">Você não realizou nenhuma doação ultimamente</p>
+      <% else %>
       <table class="table">
         <thead>
           <tr>
@@ -97,4 +110,6 @@
       </table>
     <% end %>
   </div>
+</div>
+
 </div>
