--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -21,7 +21,13 @@ main#carousel {
   perspective: 800px;
   --items: 5;
   --middle: 3;
-  --position: 1;
+  --position: 3;
+}
+
+input[type=radio] {
+  border: 0px;
+  width: 100%;
+  height: 2em;
 }
 
 div.item {
@@ -30,7 +36,7 @@ div.item {
   height: 300px;
   --r: calc(var(--position) - var(--offset));
   --abs: max(calc(var(--r) * -1), var(--r));
-  transition: all 0.5s linear;
+  transition: all 0.25s linear;
   transform: rotateY(calc(-10deg * var(--r)))
     translateX(calc(-400px * var(--r)));
   z-index: calc((var(--position) - var(--abs)));
@@ -58,6 +64,12 @@ input:nth-of-type(1) {
 }
 input:nth-of-type(1):checked ~ main#carousel {
   --position: 1;
+  div.item:nth-of-type(5) {
+    --offset: 0;
+  }
+  div.item:nth-of-type(4) {
+    --offset: -1;
+  }
 }
 
 input:nth-of-type(2) {
@@ -66,6 +78,9 @@ input:nth-of-type(2) {
 }
 input:nth-of-type(2):checked ~ main#carousel {
   --position: 2;
+  div.item:nth-of-type(5) {
+    --offset: 0;
+  }
 }
 
 input:nth-of-type(3) {
@@ -82,6 +97,9 @@ input:nth-of-type(4) {
 }
 input:nth-of-type(4):checked ~ main#carousel {
   --position: 4;
+  div.item:nth-of-type(1) {
+    --offset: 6;
+  }
 }
 
 input:nth-of-type(5) {
@@ -90,4 +108,10 @@ input:nth-of-type(5) {
 }
 input:nth-of-type(5):checked ~ main#carousel {
   --position: 5;
+  div.item:nth-of-type(1) {
+    --offset: 6;
+  }
+  div.item:nth-of-type(2) {
+    --offset: 7;
+  }
 }
