--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,5 +1,6 @@
-<div class="row header-campaigns">
-  <h1>Todas as campanhas</h1>
+  <div class="row header-campaigns">
+    <h1>Todas as campanhas</h1>
+  </div>
 </div>
 <%# <p>Lista de campanhas:</p> %>
 
