--- a/app/assets/stylesheets/components/_header-campaigns.scss
+++ b/app/assets/stylesheets/components/_header-campaigns.scss
@@ -2,10 +2,12 @@
   // margin: 10px auto;
   text-align: center;
   align-items: center;
-  height: 100px;
-  background-color: rgb(136, 82, 115);
+  height: 150px;
+  // background-color: rgb(136, 82, 115);
+  background-image: linear-gradient(to left, rgb(66, 128, 92), rgb(115, 164, 170));
   color: white;
   margin-bottom: 30px;
+
 }
 .header-campaigns h1{
   display: inline-block;
