add button doe aqui function

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>Colabore com a reconstrução da <strong>Cidade Imperial</strong></h1>
     <p>Conheça as instituições para as quais você pode doar</p>
-    <%= link_to "Doe aqui", "#", class: "btn btn-flat" %>
+    <%= link_to "Doe aqui", campaigns_path, class: "btn btn-flat" %>
 
     <div class="effetc-js mt-5">
       <span id="typed" data-controller="typed-js"
