show campaign done

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -22,6 +22,21 @@
   width: 100%;
 }
 
-.campaign {
-  width: 80%;
+// .header-show{
+
+// }
+
+.info-show{
+  // width: 600px;
+  margin: 0 auto;
+}
+.info-show{
+  width: 500px;
+  margin: 0 auto;
+  
+}
+.link-show{
+  color: white;
+  width: 300px;
+  margin: 0 auto;
 }
