--- a/app/assets/stylesheets/pages/users.scss
+++ b/app/assets/stylesheets/pages/users.scss
@@ -7,6 +7,16 @@
   padding: 40px;
 }
 
+.container-show{
+  background-color: rgb(255, 255, 255);
+  // border: 1px solid rgba(173, 167, 167, 0.685);
+  border-radius: 5px;
+  box-shadow: 2px 2px 1px rgb(184, 180, 180);
+  margin-top: 40px;
+  padding: 40px;
+  width: 80vw;
+}
+
 .header-user{
   justify-content: center;
   justify-content: space-between;
