--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,85 +1,109 @@
-<div class="show-campaign col-sm-12 col-md-8 col-lg-6 align-items-center">
-  <div class="campaign d-flex pt-5 mt-5 flex-column align-items-center justify-content-center">
-    <h1><strong><%= @campaign.name %></strong></h1>
-    <% if @campaign.image.attached? %>
-      <%= cl_image_tag @campaign.image.key, height: 300, width: 400, crop: :fill %>
-    <% else %>
-      <%= image_tag 'placeholder.jpeg', class: 'w-25' %>
-    <% end %>
-    <p class="mt-3"><%= @campaign.info %></p>
-    <p class="mb-2"><%= @campaign.phone_number %></p>
-    <%# botões excluir e editar VVVVVVVV %>
-    <% if @campaign.user == current_user %>
-      <div>
-        <%= link_to 'excluir',
-                    campaign_path(@campaign),
-                    method: :delete,
-                    data: {confirm: "Are you sure?"}%> |
-        <%= link_to 'editar', edit_campaign_path(@campaign)%>
+
+<div class="container">
+  <div class="show-campaign col-lg-6">
+    <div class="pt-5 mt-5 container-show">
+      <div class="name-show justify-content-center d-flex mb-5">
+        <h1><strong><%= @campaign.name %></strong></h1>
       </div>
-    <% end %>
-    <%# botões excluir e editar ^^^^^^^^ %>
-    <%= link_to 'Doar para essa Instituição', new_campaign_donation_path(@campaign) %>
-  </div>
+      <div class="image-show d-flex justify-content-center mb-4">
+        <% if @campaign.image.attached? %>
+          <%= cl_image_tag @campaign.image.key, height: 400, width: 400, crop: :fill %>
+        <% else %>
+          <%= image_tag 'placeholder.jpeg', class: 'w-25' %>
+        <% end %>
+      </div>
 
-  <div class="container pt-5">
-    <% if @campaign.donations.count.positive? %>
-      <p>Doações:</p>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Tipo</th>
-            <th scope="col">Quantidade</th>
-            <th scope="col">Observação</th>
-            <th scope="col">Doador</th>
-            <th scope="col">Finalizar</i></th>
-            <th scope="col"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @campaign.donations.each_with_index do |donation, index| %>
-            <tr>
-              <th scope="row"><%= index + 1 %></th>
-              <td><%= donation.donation_type.upcase %></td>
+      <div class="info-show">
+        <div class="d-flex justify-content-center">
+          <p class="mt-3"><%= @campaign.info %></p>
+        </div>
+        <div class="tel-show d-flex justify-content-center mb-3">
+          <div class="icon d-flex"><i class="fas fa-phone"></i></div><div class="number-show"><%= @campaign.phone_number %></div>
+        </div>
+      </div>
 
-              <% if donation.donation_type.upcase == 'COMIDA' %>
-                <td><%= donation.quantity%> kgs</td>
-              <% elsif donation.donation_type.upcase == 'DINHEIRO' %>
-                <td>R$ <%= donation.quantity%></td>
-              <% elsif donation.donation_type.upcase == 'ROUPAS' %>
-                <td><%= donation.quantity%> unidades</td>
-              <% else %>
-                <td style='color:#aaa;font-style:italic;'>Não especificado</td>
-              <% end %>
+      <%# botões excluir e editar VVVVVVVV %>
+      <% if @campaign.user == current_user %>
+        <div class="d-flex justify-content-center">
+          <%= link_to 'editar', edit_campaign_path(@campaign), class:"px-1"%>  |
+          <%= link_to 'excluir',
+                      campaign_path(@campaign),
+                      method: :delete,
+                      data: {confirm: "Tem certeza?"},
+                      class: "px-1",
+                      style: "color: red"%>
+        </div>
+      <% end %>
+      <%# botões excluir e editar ^^^^^^^^ %>
+      <div class="link-show d-flex justify-content-center mt-4">
+        <%= link_to 'Doar para essa Instituição', new_campaign_donation_path(@campaign), class: "btn btn-primary" %>
+      </div>
 
-              <td><%= donation.observation %></td>
-              <td><%= donation.user.name %></td>
-              <td>
-                <% if donation.done? %>
-                  <p style="color: #6c757d;"> concluída </p>
-                <% else %>
-                  <p style="color: #0d6efd;"> aberta </p>
-                <% end %>
-              </td>
-              <% if current_user == @campaign.user%>
-                <td>
-                  <% if donation.done? %>
-                    <i class="fas fa-check-square" style="color:green;"></i>
+      <div class="pt-5">
+        <% if @campaign.donations.count.positive? %>
+          <p>Doações:</p>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Tipo</th>
+                <th scope="col">Quantidade</th>
+                <th scope="col">Observação</th>
+                <th scope="col">Doador</th>
+                <th scope="col">Finalizar</i></th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @campaign.donations.each_with_index do |donation, index| %>
+                <tr>
+                  <th scope="row"><%= index + 1 %></th>
+                  <td><%= donation.donation_type.upcase %></td>
+
+                  <% if donation.donation_type.upcase == 'COMIDA' %>
+                    <td><%= donation.quantity%> kgs</td>
+                  <% elsif donation.donation_type.upcase == 'DINHEIRO' %>
+                    <td>R$ <%= donation.quantity%></td>
+                  <% elsif donation.donation_type.upcase == 'ROUPAS' %>
+                    <td><%= donation.quantity%> unidades</td>
                   <% else %>
-                    <%= simple_form_for donation do |f| %>
-                      <%= f.input :done, as: :hidden, input_html: { value: 'true' }, data: {confirm: "Confirmar ação"} %>
-                      <%= f.submit "concluir doação", class: "btn btn-outline-secondary btn-sm" %>
-                    <% end %>
+                    <td style='color:#aaa;font-style:italic;'>Não especificado</td>
                   <% end %>
-                </td>
+
+                  <td><%= donation.observation %></td>
+                  <td><%= donation.user.name %></td>
+                  <td>
+                    <% if donation.done? %>
+                      <p style="color: #6c757d;"> concluída </p>
+                    <% else %>
+                      <p style="color: #0d6efd;"> aberta </p>
+                    <% end %>
+                  </td>
+                  <% if current_user == @campaign.user%>
+                    <td>
+                      <% if donation.done? %>
+                        <i class="fas fa-check-square" style="color:green;"></i>
+                      <% else %>
+                        <%= simple_form_for donation do |f| %>
+                          <%= f.input :done, as: :hidden, input_html: { value: 'true' }, data: {confirm: "Confirmar ação"} %>
+                          <%= f.submit "concluir doação", class: "btn btn-outline-secondary btn-sm" %>
+                        <% end %>
+                      <% end %>
+                    </td>
+                  <% end %>
+                </tr>
               <% end %>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    <% else %>
-      <p>Nenhuma doação ainda</p>
-    <% end %>
-  </div>
+            </tbody>
+          </table>
+        <% else %>
+        <div class="footer-text-show d-flex justify-content-center">
+          <p>Nenhuma doação ainda</p>
+        </div>
+
+        <% end %>
+      </div>
+    </div>
+      </div>
+
+
 </div>
